# public-thesis-repo

./: .gitignore  cameraPredictorTest.py  capsegment.py  capsegmentwTracking.py  environment.yml  human_body_segmentation_test.py  mediaPipeMultiClassDemo.py  mediapipeGPUtest.py  mediapipedemo.py  mediapipedemowinpainting.py  objectTrackerTest.py  requirements.txt  run_sam2.py  sam2DEMO.py  test.py  test_imshow.py  tfposeDemo.py  webcamtest.py  webcamtestcv2.py  yolotest.py  yolotrain.py
demo/: Dockerfile  MediapipePipeline.py  SAM2InpaintPipeline.py  SAM2maskOnlyPipeline.py  app.py  utils.py
demo/templates/: index.html
frontend/: app.py  index.html
mediapipe_demo/: .env  SAM2maskOnlyPipeline.py  app.py  envtest.py  pipeline.py  requirements.txt  utils.py
sam2/: build_sam.py
tflite_gpu_delegate_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
